--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,15 +6,15 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="spinwheel.sample.MainActivity">
 
     <com.spinwheel.WheelView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        app:centerCircleColor="@color/colorAccent"
         app:centerText="Spin Now"
-        app:noOfPossibilities="8"/>
+        app:centerTextColor="@android:color/white"
+        app:centerTextSize="20sp"
+        app:circleColor="@color/colorPrimary"
+        app:circleStroke="10dp"/>
 </RelativeLayout>
